changing default path

--- a/custom_nginx/index.html
+++ b/custom_nginx/index.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to NGINX!</h1>
+    <h1>Welcome to NGINX!(testing)</h1>
     <p>If you see this page, the NGINX web server is successfully installed and working.</p>
     <p>Further configuration is required to host your site.</p>
     <hr>
